deployment.yaml
# --- BACKEND DEPLOYMENT ---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
      - name: backend
        image: qabot.azurecr.io/backend:v4
        imagePullPolicy: Always
        ports:
        - containerPort: 8000
        command: ["/bin/bash", "-c"]
        args: ["gunicorn --bind 0.0.0.0:8000 --timeout 600 --workers 1 --threads 8 run:app"]
---
# --- BACKEND EXTERNAL SERVICE ---
apiVersion: v1
kind: Service
metadata:
  name: backend-service
spec:
  type: ClusterIP  # <--- CHANGE THIS from LoadBalancer
  ports:
  - port: 80
    targetPort: 8000
  selector:
    app: backend
